# Alpha-development

./: .gitignore  CLAUDE.md  Cargo.toml  NS-Engine-Missing-Personality-Emergence.md  README.md  alpha_chat.py  alpha_web.py  brain.py  brain_patches.py  claude_teacher.py  cold_base.py  hybrid_snn_llm.py  main.rs  ollama_mind.py  phase2.py  requirements.txt  semantic_memory.json  setup_fedora.sh  spiking_advanced.py  stt_engine.py  system_bridge.py  training_trace.jsonl  tts_engine.py  tui.rs  vision.py
.cargo/: config.toml
.github/: ruleset.json
.github/rulesets/: alpha-rulesets.json  branch-naming.json  protect-dev.json  protect-main.json
Nova_Simona_Core/: Cargo.toml  README.md  brain.py  requirements.txt
Nova_Simona_Core/Nova_Simona_Core/src/: main.rs
Nova_Simona_Core/src/: main.rs  sensors.rs  telemetry.rs
Nova_Simona_Core/src/brain/: mod.rs  neuromod.rs  neurons.rs  nova.rs  phill.rs  simona.rs  synapses.rs
src/: audio.rs  brain_thread.rs  main.rs  state.rs  stt_bridge.rs  tui.rs
