[package]
name    = "nova_simona_core"
version = "0.1.0"
edition = "2021"

# The "body" is a standalone binary that embeds Python.
# For a library that Python imports instead, swap to:
#   [lib] crate-type = ["cdylib"]
[[bin]]
name = "nova_simona_core"
path = "src/main.rs"

[dependencies]
# PyO3 — the FFI bridge between Rust and Python.
# "auto-initialize" lets us call prepare_freethreaded_python() ourselves.
pyo3 = { version = "0.21", features = ["auto-initialize"] }

[profile.release]
opt-level     = 3
lto           = true      # Link-time optimization — smaller, faster binary
codegen-units = 1         # Maximize inlining across crates
panic         = "abort"   # No stack-unwinding overhead on edge hardware

# ── BUILD INSTRUCTIONS ────────────────────────────────────────────────────────
#
# 1. Install Python deps:
#      pip install -r requirements.txt
#
# 2. Tell PyO3 which Python to link against.
#    Set the env var before building:
#      export PYO3_PYTHON=$(which python3)
#
# 3. Build and run:
#      cargo run --release
#
# For Raspberry Pi / mobile NPU cross-compilation:
#      cargo build --release --target aarch64-unknown-linux-gnu
#
# ─────────────────────────────────────────────────────────────────────────────
